# legacy-game-engine

./: CMakeLists.txt  README.md
include/LinearMath/: btScalar.h
include/headers/: camera.hpp  model.hpp  object.hpp  physics-functions.hpp  screen-quad.hpp  standard-functions.hpp  structs.hpp  terrain.hpp
include/headers/scripts/: camera-controller.hpp  character-controller.hpp
libs/: Bullet3Common.lib  LinearMath_Debug.lib  assimp-vc140-mt.exp
oldbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  DartConfiguration.tcl  Experimental.vcxproj  Makefile  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json  dungeon-crawler.sln  dungeon-crawler.vcxproj
oldbuild/dungeon-crawler.dir/Debug/: dungeon-crawler.exe.recipe
oldbuild/dungeon-crawler.dir/Debug/dungeon-crawler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog
oldbuild/win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
resources/models/hut/: HutHigh.mtl  HutLow.mtl  HutMid.mtl
resources/models/spec-cube/: SpecCube.mtl
resources/shaders/bloom/: fragment-shader.frag  vertex-shader.vert
resources/shaders/blur/: fragment-shader.frag
resources/shaders/deferred/geometry/: fragment-shader.frag  vertex-shader.vert
resources/shaders/deferred/solid/: fragment-shader.frag  vertex-shader.vert
resources/shaders/forward/bloom/: fragment-shader.frag
resources/shaders/forward/blur/: fragment-shader.frag
resources/shaders/hdr/: fragment-shader.frag  vertex-shader.vert
resources/shaders/screen-quad/: fragment-shader.frag
resources/shaders/solid/: fragment-shader.frag  vertex-shader.vert
resources/shaders/standard-postprocessing/: fragment-shader.frag
source/: camera.cpp  main.cpp  model.cpp  object.cpp  physics-functions.cpp  screen-quad.cpp  standard-functions.cpp  terrain.cpp
source/scripts/: camera-controller.cpp  character-controller.cpp
(+16 files in other folders)
